Bug #1126
date(1)'s usage message doesn't mention -R
Start date:
2011-06-18
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
When -R was added to date(1), the manual page was updated but the usage message was not:
usage: date [-u] mmddHHMM[[cc]yy][.SS] date [-u] [+format] date -a [-]sss[.fff]
Updated by Thomas Gouverneur over 9 years ago
- Status changed from New to Feedback
- % Done changed from 0 to 100
I've send a review request to the developers mailling for this.
Please see
Updated by Thomas Gouverneur over 9 years ago
I've send a review request to the developers mailling for this.
Please see http://wildcat.espix.org/cr/illumos-1126-webrev/
Updated by Yuri Pankov over 8 years ago
- Status changed from Feedback to Resolved
- Assignee changed from Thomas Gouverneur to Yuri Pankov
Resolved in 13832:8e4bcbc31a4a.