1126 date(1)'s usage message doesn't mention -R 1788 "WARNING: Cannot lookup root device: /devices" is useless when rootfs is zfs 1828 powerd's "Able to open /dev/srn" notice is useless 2547 Minor updates to README 2678 zfs manpage mis-identifies checksum default value 2811 missing implementation: zfs send -r 3199 Update copyright years in usr/src/prototypes/ Reviewed by: Joshua M. Clulow <josh@sysmgr.org> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Dan McDonald <danmcd@nexenta.com>