usr/src/prototypes/prototype.py
@@ -11,7 +11,7 @@
 #
 
 #
-# Copyright 2011 <contributor>.  All rights reserved.
+# Copyright 2012 <contributor>.  All rights reserved.
 #
 
 #
